--- a/LATIHAN BOOSTRAP Mfahrisah.html
+++ b/LATIHAN BOOSTRAP Mfahrisah.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Latihan Grid M.FADILAH AKBAR</title>
+        <title>Latihan Grid M.FAHRI SAH</title>
         <link rel="stylesheet" href="boostrap-4.3.1-dist/css/boostrap.min.css:">
      </head>
     <body>
